--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <div class="action-icon">👥</div>
                             <h3>Browse Alumni</h3>
                             <p>Connect with graduates</p>
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
